--- a/source/sass/blocks/popup-form.scss
+++ b/source/sass/blocks/popup-form.scss
@@ -62,7 +62,7 @@
     min-height: 50px;
     background-color: $white-opacity;
     color: $white;
-    font-family: "PT Mono";
+    font-family: "PT Mono", sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
@@ -82,7 +82,7 @@
     padding: 15px 20px;
     background-color: $white-opacity;
     color: $white;
-    font-family: "PT Mono";
+    font-family: "PT Mono", sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
@@ -120,15 +120,15 @@
 
 .popup-form__agreement-checkbox {
   label {
-  position: relative;
-  padding-left: 48px;
-  padding-right: 10px;
-  cursor: pointer;
-  font-size: 14px;
-  line-height: 16px;
-  opacity: 0.8;
-  color: $white;
-  display: inline-block;
+    position: relative;
+    padding-left: 48px;
+    padding-right: 10px;
+    cursor: pointer;
+    font-size: 14px;
+    line-height: 16px;
+    opacity: 0.8;
+    color: $white;
+    display: inline-block;
 
     &::before {
       content: "";
@@ -141,20 +141,20 @@
       border: 1px solid $white;
     }
   }
+}
 
-  input[type="checkbox"] {
-    display: none;
+.popup-form__agreement-checkbox-input {
+  display: none;
 
-    &:checked + label {
-      &::after {
-        content: "";
-        position: absolute;
-        width: 8px;
-        height: 5px;
-        top: 5px;
-        left: 5px;
-        background: url("../../img/icons/check-icon.svg") 50% no-repeat;
-      }
+  &:checked + label {
+    &::after {
+      content: "";
+      position: absolute;
+      width: 8px;
+      height: 5px;
+      top: 5px;
+      left: 5px;
+      background: url("../../img/icons/check-icon.svg") 50% no-repeat;
     }
   }
 }
