--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -2,11 +2,11 @@ $tablet-width: 1023px;
 $mobile-width: 767px;
 
 $white: #ffffff;
-$dark: #1B2D37;
+$dark: #1b2d37;
 $black: #666666;
-$blue: #00B2FF;
+$blue: #00b2ff;
 $light-grey: #ebebeb;
-$light: #FAFAFA;
+$light: #fafafa;
 $grey: #626962;
 $grey-transparent: rgba(98, 105, 98, 0.2);
 $grey-toggle: #c4c4c4;
