--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -1,9 +1,9 @@
 .page {
-font-family: "PT mono", "Arial", sans-serif;
-font-style: normal;
-font-weight: normal;
-scroll-behavior: smooth;
-height: 100%;
+  font-family: "PT mono", "Arial", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  scroll-behavior: smooth;
+  height: 100%;
 }
 
 .page__body {
@@ -19,23 +19,22 @@ height: 100%;
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     z-index: 99;
     cursor: pointer;
   }
 }
 
 .page__wrapper {
-min-height: 100%;
-display: flex;
-flex-direction: column;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .page__body--scroll-disabled {
-overflow: hidden;
+  overflow: hidden;
 }
 
 .page__main {
-flex: 1 1 auto;
+  flex: 1 1 auto;
 }
-
