--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -1,35 +1,35 @@
 @font-face {
-  font-family: 'PT Mono';
+  font-family: "PT Mono";
   font-style: normal;
   font-weight: 400;
-  src: local(''),
-    url('../fonts/pt-mono-v11-latin_cyrillic-regular.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../fonts/pt-mono-v11-latin_cyrillic-regular.woff') format('woff'), /* Modern Browsers */
+  src: local(""),
+    url("../fonts/pt-mono-v11-latin_cyrillic-regular.woff2") format("woff2"),
+    url("../fonts/pt-mono-v11-latin_cyrillic-regular.woff") format("woff");
 }
 
 @font-face {
-  font-family: 'Roboto Condensed';
+  font-family: "Roboto Condensed";
   font-style: normal;
   font-weight: 300;
-  src: local(''),
-    url('../fonts/roboto-condensed-v24-latin_cyrillic-300.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../fonts/roboto-condensed-v24-latin_cyrillic-300.woff') format('woff'), /* Modern Browsers */
+  src: local(""),
+    url("../fonts/roboto-condensed-v24-latin_cyrillic-300.woff2") format("woff2"),
+    url("../fonts/roboto-condensed-v24-latin_cyrillic-300.woff") format("woff");
 }
 
 @font-face {
-  font-family: 'Roboto Condensed';
+  font-family: "Roboto Condensed";
   font-style: normal;
   font-weight: 400;
-  src: local(''),
-    url('../fonts/roboto-condensed-v24-latin_cyrillic-regular.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../fonts/roboto-condensed-v24-latin_cyrillic-regular.woff') format('woff'), /* Modern Browsers */
+  src: local(""),
+    url("../fonts/roboto-condensed-v24-latin_cyrillic-regular.woff2") format("woff2"),
+    url("../fonts/roboto-condensed-v24-latin_cyrillic-regular.woff") format("woff");
 }
 
 @font-face {
-  font-family: 'Roboto Condensed';
+  font-family: "Roboto Condensed";
   font-style: normal;
   font-weight: 700;
-  src: local(''),
-    url('../fonts/roboto-condensed-v24-latin_cyrillic-700.woff2') format('woff2'),
-    url('../fonts/roboto-condensed-v24-latin_cyrillic-700.woff') format('woff')
+  src: local(""),
+    url("../fonts/roboto-condensed-v24-latin_cyrillic-700.woff2") format("woff2"),
+    url("../fonts/roboto-condensed-v24-latin_cyrillic-700.woff") format("woff");
 }
