--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -1,5 +1,5 @@
 .page {
-  font-family: "PT mono", "Arial", sans-serif;
+  font-family: "PT mono", "Times New Roman", sans-serif;
   font-style: normal;
   font-weight: normal;
   scroll-behavior: smooth;
