--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -3,6 +3,7 @@ $mobile-width: 767px;
 
 $white: #ffffff;
 $dark: #1b2d37;
+$classic-black: #000000;
 $black: #666666;
 $blue: #00b2ff;
 $light-grey: #ebebeb;
@@ -11,3 +12,7 @@ $grey: #626962;
 $grey-transparent: rgba(98, 105, 98, 0.2);
 $grey-toggle: #c4c4c4;
 $white-opacity: rgba(255, 255, 255, 0.1);
+$icon-color: #cdcdcd;
+$vk-color: #4c75a3;
+$ok-color: #ed812b;
+$fb-color: #3b5998;
