--- a/source/sass/blocks/about-us.scss
+++ b/source/sass/blocks/about-us.scss
@@ -37,7 +37,7 @@
   position: relative;
 
   h1 {
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: "Roboto Condensed", "Arial", sans-serif;
     font-weight: bold;
     font-size: 80px;
     line-height: 94px;
@@ -77,7 +77,7 @@
   width: 407px;
   background-color: $blue;
   color: $white;
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: "Roboto Condensed", "Arial", sans-serif;
   font-weight: bold;
   font-size: 16px;
   line-height: 19px;
@@ -88,6 +88,12 @@
 
   .about-us__button-label--short {
     display: none;
+  }
+
+  &:hover,
+  &:focus {
+    font-size: 17px;
+    opacity: 0.8;
   }
 }
 
@@ -144,6 +150,11 @@
   .about-us__button {
     margin-left: 50px;
     width: 380px;
+
+    &:hover,
+    &:focus {
+      font-size: 16px;
+    }
   }
 
   @media (min-resolution: 2dppx) {
