--- a/source/sass/blocks/popup-form.scss
+++ b/source/sass/blocks/popup-form.scss
@@ -23,6 +23,11 @@
     padding: 0;
     cursor: pointer;
 
+    &:hover,
+    &:focus {
+      opacity: 0.8;
+    }
+
     &::before,
     &::after {
       content: "";
@@ -44,7 +49,7 @@
   }
 
   h2 {
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: "Roboto Condensed", "Arial", sans-serif;
     font-weight: normal;
     font-size: 28px;
     line-height: 140.62%;
@@ -57,104 +62,26 @@
     margin-bottom: 35px;
   }
 
-  input[type="text"] {
-    flex-grow: 1;
-    min-height: 50px;
-    background-color: $white-opacity;
-    color: $white;
-    font-family: "PT Mono", sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 22px;
-    border: 0;
-    outline: 0;
-    padding: 10px 25px;
+  input[type="text"],
+  input[type="tel"] {
     margin-bottom: 30px;
-
-    &::placeholder {
-      color: $white;
-    }
-  }
-
-  textarea {
-    width: 100%;
-    padding: 15px 20px;
-    background-color: $white-opacity;
-    color: $white;
-    font-family: "PT Mono", sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 22px;
-    border: 0;
-    outline: 0;
-    margin-bottom: 30px;
-    height: 104px;
-
-    &::placeholder {
-      color: $white;
-    }
   }
 
   input[type="submit"] {
-    display: block;
-    border: 1px solid $white;
-    border-radius: 5px;
-    background-color: transparent;
-    padding: 14px 18px 8px;
-    font-family: "Roboto Condensed", sans-serif;
-    font-weight: bold;
-    color: $white;
-    font-size: 14px;
-    line-height: 16px;
-    text-align: center;
-    letter-spacing: 0.05em;
-    text-transform: uppercase;
-    flex-grow: 1;
-    min-height: 45px;
-    cursor: pointer;
     margin-bottom: 35px;
+    max-width: none;
+  }
+
+  textarea {
+    height: 104px;
+    min-height: auto;
+    margin-bottom: 30px;
   }
 }
 
 .popup-form__agreement-checkbox {
   label {
-    position: relative;
     padding-left: 48px;
     padding-right: 10px;
-    cursor: pointer;
-    font-size: 14px;
-    line-height: 16px;
-    opacity: 0.8;
-    color: $white;
-    display: inline-block;
-
-    &::before {
-      content: "";
-      position: absolute;
-      width: 16px;
-      height: 16px;
-      top: 0;
-      left: 0;
-      background-color: transparent;
-      border: 1px solid $white;
-    }
-  }
-}
-
-.popup-form__agreement-checkbox-input {
-  display: none;
-
-  &:checked + label {
-    &::after {
-      content: "";
-      position: absolute;
-      width: 8px;
-      height: 5px;
-      top: 5px;
-      left: 5px;
-      background: url("../../img/icons/check-icon.svg") 50% no-repeat;
-    }
   }
 }
