--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,6 +3,7 @@
 @import "global/global.scss";
 @import "blocks/page.scss";
 @import "blocks/page-header.scss";
+@import "blocks/form.scss";
 @import "blocks/page-footer.scss";
 @import "blocks/about-us.scss";
 @import "blocks/advantages.scss";
