--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -5,7 +5,7 @@
     min-height: 50px;
     background-color: $white-opacity;
     color: $white;
-    font-family: "PT Mono", sans-serif;
+    font-family: "PT Mono", "Courier New", monospace;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
@@ -30,7 +30,7 @@
     padding: 13px 16px;
     background-color: $white-opacity;
     color: $white;
-    font-family: "PT Mono", sans-serif;
+    font-family: "PT Mono", "Courier New", monospace;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
