--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,3 +10,4 @@
 @import "blocks/our-services.scss";
 @import "blocks/questions.scss";
 @import "blocks/popup-form.scss";
+@import "blocks/form-container.scss";
