--- a/source/sass/blocks/about-us.scss
+++ b/source/sass/blocks/about-us.scss
@@ -102,6 +102,17 @@
   }
 }
 
+@media (max-width: 1196px) {
+  .about-us__wrapper {
+    max-width: 700px;
+    margin: 0;
+
+    p {
+      width: 500px;
+    }
+  }
+}
+
 @media (max-width: $tablet-width) {
   .about-us {
     background-image: url("../img/main-background-tablet.webp");
