--- a/source/sass/blocks/our-services.scss
+++ b/source/sass/blocks/our-services.scss
@@ -5,11 +5,11 @@
 .our-services__wrapper {
   max-width: 1230px;
   margin: 0 auto;
-  padding: 90px 30px 130px;
+  padding: 90px 30px 100px;
 
   p {
     font-family: "Roboto Condensed", "Arial", sans-serif;
-    font-size: 1.8vw;
+    font-size: 36px;
     line-height: 51px;
     font-weight: normal;
     color: $white;
@@ -21,13 +21,21 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 30px;
 
   li {
     width: 19.2vw;
     min-width: 200px;
     min-height: 620px;
     flex-grow: 1;
+    margin-bottom: 30px;
+
+    &:not(:nth-child(3n)) {
+      margin-right: 30px;
+    }
+
+    &:last-child {
+      margin-right: 0;
+    }
   }
 }
 
@@ -110,9 +118,17 @@
   }
 }
 
+@media (max-width: 1407px) {
+  .our-services__list {
+    li {
+      width: 300px;
+    }
+  }
+}
+
 @media (max-width: $tablet-width) {
   .our-services__wrapper {
-    padding: 53px 25px 75px;
+    padding: 53px 25px 32px;
 
     p {
       font-size: 32px;
@@ -122,13 +138,18 @@
 
   .our-services__list {
     flex-direction: column;
-    gap: 45px;
 
     li {
       width: auto;
       min-width: auto;
       min-height: auto;
       flex-grow: 1;
+      margin-bottom: 45px;
+
+      &:not(:nth-child(3n)),
+      &:not(:last-child) {
+        margin-right: 0;
+      }
     }
   }
 
@@ -172,7 +193,7 @@
     justify-content: center;
     padding-left: 15px;
     padding-right: 15px;
-    padding-bottom: 65px;
+    padding-bottom: 35px;
 
     p {
       font-size: 28px;
@@ -199,7 +220,9 @@
   }
 
   .our-services__list {
-    gap: 30px;
+    li {
+      margin-bottom: 30px;
+    }
   }
 
   @media (min-resolution: 2dppx) {
@@ -215,6 +238,14 @@
       &--accessories {
         background-image: url("../img/service3-mobile2x.webp");
       }
+    }
+  }
+}
+
+@media (min-width: 1921px) {
+  .our-services__list {
+    li {
+      width: 370px;
     }
   }
 }
