--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -3,18 +3,21 @@
   font-style: normal;
   font-weight: normal;
   scroll-behavior: smooth;
+}
+
+.page,
+.page__body {
   height: 100%;
 }
 
 .page__body {
-  height: 100%;
   overflow-x: hidden;
 
   .page__body-overlay {
     content: "";
     position: fixed;
-    width: 1000%;
-    height: 1000%;
+    width: 100%;
+    height: 100%;
     top: 0;
     left: 0;
     right: 0;
