--- a/source/sass/blocks/popup-form.scss
+++ b/source/sass/blocks/popup-form.scss
@@ -1,15 +1,13 @@
 .popup-form {
-  position: fixed;
-  top: 135px;
-  left: 50%;
-  margin-left: -245px;
   color: $white;
   background-color: $blue;
-  padding: 33px 40px 40px;
-  max-width: 490px;
+  padding: 33px 40px 37px;
+  width: 490px;
+  min-height: 605px;
   display: flex;
   flex-direction: column;
   z-index: 100;
+  position: relative;
 
   .popup-form__toggle {
     position: absolute;
@@ -60,22 +58,28 @@
     font-size: 16px;
     line-height: 22px;
     margin-bottom: 35px;
+    padding-right: 10px;
   }
 
   input[type="text"],
   input[type="tel"] {
     margin-bottom: 30px;
+    padding-left: 20px;
+    flex-grow: 0;
   }
 
   input[type="submit"] {
-    margin-bottom: 35px;
+    margin-bottom: 38px;
     max-width: none;
+    flex-grow: 0;
   }
 
   textarea {
-    height: 104px;
-    min-height: auto;
+    overflow-y: auto;
     margin-bottom: 30px;
+    padding-left: 25px;
+    height: 104px;
+    min-height: unset;
   }
 }
 
