--- a/source/sass/blocks/questions.scss
+++ b/source/sass/blocks/questions.scss
@@ -100,6 +100,8 @@
 
   .questions__container {
     width: auto;
+    max-width: 590px;
+    margin: 0 auto;
 
     h3 {
       font-size: 32px;
@@ -129,6 +131,8 @@
   }
 
   .questions__container {
+    max-width: 290px;
+
     h3 {
       font-size: 28px;
       line-height: 140.62%;
