--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -29,6 +29,7 @@
   line-height: 18px;
   margin-bottom: 10px;
   margin-right: auto;
+  min-width: 140px;
 
   &:last-child,
   &:nth-child(2n) {
@@ -88,6 +89,7 @@
     align-self: center;
     padding: 0;
     margin: 0 0 15px;
+    min-width: unset;
 
     span {
       display: none;
